# pyr

./: .otto.yml  .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: binary-release.yml  ci.yml
docs/: design.md
src/: cli.rs  main.rs  parser.rs  pattern.rs  walk.rs
src/analysis/: classes.rs  enums.rs  functions.rs  mod.rs  modules.rs
src/output/: format.rs  mod.rs  types.rs
tests/fixtures/: binop_other.py  classes.py  edge_cases.py  empty.py  enums.py  expressions.py  functions.py  mixed.py
